enable websocket connection for polygon.io

--- a/ArbitrageGainer.fsproj
+++ b/ArbitrageGainer.fsproj
@@ -6,7 +6,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="Program.fs" />
+    <Compile Include="PolygonStarterCode-1.fs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="DotNetEnv" Version="3.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include=".env" />
   </ItemGroup>
 
 </Project>
