--- a/ArbitrageGainer.fsproj
+++ b/ArbitrageGainer.fsproj
@@ -5,17 +5,14 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="TradingStrategy.fs" />
-    <Compile Include="Program.fs" />
     <Compile Include="PolygonStarterCode-1.fs" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="Suave" Version="2.6.2" />
+    <Compile Include="Program.fs" /> 
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="FSharp.SystemTextJson" Version="1.3.13" />
     <PackageReference Include="Giraffe" Version="5.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="System.Text.Json" Version="8.0.5" />
+    <PackageReference Include="DotNetEnv" Version="2.4.0" /> 
   </ItemGroup>
 </Project>
