--- a/ArbitrageGainer.fsproj
+++ b/ArbitrageGainer.fsproj
@@ -4,11 +4,13 @@
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="CrossTradedPairs.fs" />
     <Compile Include="TradingStrategy.fs" />
     <Compile Include="RealTimeMarketData.fs" />
     <Compile Include="Program.fs" /> 
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="DotNetEnv" Version="2.4.0" />
     <PackageReference Include="FSharp.SystemTextJson" Version="1.3.13" />
     <PackageReference Include="Giraffe" Version="5.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
