--- a/ArbitrageGainer.fsproj
+++ b/ArbitrageGainer.fsproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="AnnualizedReturnCalc.fs" />
     <Compile Include="TradingStrategy.fs" />
     <Compile Include="PolygonStarterCode-1.fs" />
     <Compile Include="Program.fs" /> 
