--- a/ArbitrageGainer.fsproj
+++ b/ArbitrageGainer.fsproj
@@ -4,15 +4,20 @@
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Domain.fs" />
+    <Compile Include="Infrastructure.fs" />
+    <Compile Include="Application.fs" />
+    <Compile Include="Presentation.fs" />
     <Compile Include="RealTimeMarketData.fs" />
-    <Compile Include="TradingStrategy.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="DotNetEnv" Version="3.1.1" />
     <PackageReference Include="FSharp.SystemTextJson" Version="1.3.13" />
     <PackageReference Include="Giraffe" Version="5.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="System.Text.Json" Version="8.0.5" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" /> 
   </ItemGroup>
 </Project>
