--- a/ArbitrageGainer.fsproj
+++ b/ArbitrageGainer.fsproj
@@ -2,17 +2,20 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
+    <IsTestProject>true</IsTestProject>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="AnnualizedReturnCalc.fs" />
     <Compile Include="TradingStrategy.fs" />
     <Compile Include="PolygonStarterCode-1.fs" />
     <Compile Include="Program.fs" /> 
+<!--    <Compile Include="AnnualizedReturnCalcTest.fs" /> -->
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="FSharp.SystemTextJson" Version="1.3.13" />
     <PackageReference Include="Giraffe" Version="5.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="NUnit" Version="4.2.2" />
     <PackageReference Include="System.Text.Json" Version="8.0.5" />
     <PackageReference Include="DotNetEnv" Version="2.4.0" /> 
   </ItemGroup>
