feat: integrate history arbitrage opportunity

--- a/ArbitrageGainerTest/ArbitrageGainerTest.fsproj
+++ b/ArbitrageGainerTest/ArbitrageGainerTest.fsproj
@@ -11,6 +11,7 @@
 
     <ItemGroup>
         <Compile Include="AnnualizedReturnCalcTest.fs"/>
+        <Compile Include="HistoryArbitrageOpportunityTest.fs" />
     </ItemGroup>
 
     <ItemGroup>
