--- a/ArbitrageGainer.fsproj
+++ b/ArbitrageGainer.fsproj
@@ -8,8 +8,8 @@
     <Compile Include="AnnualizedReturnCalc.fs" />
     <Compile Include="TradingStrategy.fs" />
     <Compile Include="PolygonStarterCode-1.fs" />
-    <Compile Include="Program.fs" /> 
-<!--    <Compile Include="AnnualizedReturnCalcTest.fs" /> -->
+    <Compile Include="HistoryArbitrageOpportunity.fs" />
+    <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="FSharp.SystemTextJson" Version="1.3.13" />
@@ -17,6 +17,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="NUnit" Version="4.2.2" />
     <PackageReference Include="System.Text.Json" Version="8.0.5" />
-    <PackageReference Include="DotNetEnv" Version="2.4.0" /> 
+    <PackageReference Include="DotNetEnv" Version="2.4.0" />
+    <PackageReference Include="FSharp.Data" Version="6.4.0" />
   </ItemGroup>
 </Project>
