--- a/ArbitrageGainer.fsproj
+++ b/ArbitrageGainer.fsproj
@@ -4,19 +4,20 @@
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="AnnualizedReturnCalc.fs" />
-    <Compile Include="HistoryArbitrageOpportunity.fs" />
-    <Compile Include="CrossTradedPairs.fs" />
-    <Compile Include="Domain.fs" />
-    <Compile Include="Infrastructure.fs" />
-    <Compile Include="Application.fs" />
+
+
+    <Compile Include="Infrastructure\AnnualizedReturnCalc.fs" />
+    <Compile Include="Services\HistoryArbitrageOpportunity.fs" />
+    <Compile Include="Infrastructure\CrossTradedPairs.fs" />
+    <Compile Include="Core\Domain.fs" />
+    <Compile Include="Infrastructure\TradingStrategyInfra.fs" />
+    <Compile Include="Services\Application.fs" />
     <Compile Include="Presentation.fs" />
-    <Compile Include="RealTimeMarketData.fs" />
+    <Compile Include="Infrastructure\RealTimeMarketData.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotNetEnv" Version="3.1.1" />
     <PackageReference Include="FSharp.SystemTextJson" Version="1.3.13" />
     <PackageReference Include="Giraffe" Version="5.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
@@ -25,4 +26,6 @@
     <PackageReference Include="NUnit" Version="4.2.2" />
     <PackageReference Include="FSharp.Data" Version="6.4.0" />
   </ItemGroup>
+
+
 </Project>
