--- a/ArbitrageGainerTest/ArbitrageGainerTest.fsproj
+++ b/ArbitrageGainerTest/ArbitrageGainerTest.fsproj
@@ -10,16 +10,17 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Compile Include="AnnualizedReturnCalcTest.fs"/>
+        <Compile Include="AnnualizedReturnCalcTest.fs" />
         <Compile Include="HistoryArbitrageOpportunityTest.fs" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1"/>
-        <PackageReference Include="NUnit" Version="4.2.2"/>
-        <PackageReference Include="NUnit3TestAdapter" Version="4.6.0"/>
-        <PackageReference Include="NUnit.Analyzers" Version="4.3.0"/>
-        <PackageReference Include="coverlet.collector" Version="6.0.2"/>
+        <PackageReference Include="FsUnit" Version="6.0.1" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
+        <PackageReference Include="NUnit" Version="4.2.2" />
+        <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
+        <PackageReference Include="NUnit.Analyzers" Version="4.3.0" />
+        <PackageReference Include="coverlet.collector" Version="6.0.2" />
     </ItemGroup>
 
     <ItemGroup>
