--- a/ArbitrageGainer.fsproj
+++ b/ArbitrageGainer.fsproj
@@ -3,18 +3,20 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
+
   <ItemGroup>
-
-
-    <Compile Include="Infrastructure\AnnualizedReturnCalc.fs" />
-    <Compile Include="Services\HistoryArbitrageOpportunity.fs" />
-    <Compile Include="Infrastructure\CrossTradedPairs.fs" />
+    <Compile Include="Domain\CrossTradePair.fs" />
     <Compile Include="Core\TradingStrategyDomain.fs" />
-    <Compile Include="Infrastructure\TradingStrategyInfra.fs" />
+    <Compile Include="Services\HistoryArbitrageOpportunity.fs" />
     <Compile Include="Services\TradingStrategyApplication.fs" />
-    <Compile Include="Presentation.fs" />
+    <Compile Include="Services\CrossTradePair.fs" />
+    <Compile Include="Infrastructure\AnnualizedReturnCalc.fs" />
+    <Compile Include="Infrastructure\CrossTradedPairs.fs" />
+    <Compile Include="Infrastructure\TradingStrategyInfra.fs" />
     <Compile Include="Infrastructure\RealTimeMarketData.fs" />
-    <Compile Include="Program.fs" />
+    <Compile Include="Presentation\CrossTradePairHandler.fs" />
+    <Compile Include="Presentation.fs" />
+    <Compile Include="Program.fs" /> 
   </ItemGroup>
 
   <ItemGroup>
@@ -26,6 +28,4 @@
     <PackageReference Include="NUnit" Version="4.2.2" />
     <PackageReference Include="FSharp.Data" Version="6.4.0" />
   </ItemGroup>
-
-
 </Project>
