fix: fix no index issues

--- a/ArbitrageGainer.fsproj
+++ b/ArbitrageGainer.fsproj
@@ -9,12 +9,16 @@
     <Compile Include="Core\TradingStrategyDomain.fs" />
     <Compile Include="Services\HistoryArbitrageOpportunity.fs" />
     <Compile Include="Services\CrossTradePair.fs" />
+    <Compile Include="Services\TradingStrategyAgent.fs" />
+    <Compile Include="Services\TradingStrategyService.fs" />
+    <Compile Include="Services\Config.fs" />
+    <Compile Include="Services\Database.fs" />
+    <Compile Include="Services\Repository\TradingStrategyRepository.fs" />
+    <Compile Include="Services\Repository\UserRepository.fs" />
     <Compile Include="Infrastructure\AnnualizedReturnCalc.fs" />
     <Compile Include="Infrastructure\CrossTradedPairs.fs" />
     <Compile Include="Infrastructure\TradingStrategyInfra.fs" />
     <Compile Include="Infrastructure\RealTimeMarketData.fs" />
-    <Compile Include="Services\TradingStrategyAgent.fs" />
-    <Compile Include="Services\TradingStrategyService.fs" />
     <Compile Include="Presentation\CrossTradePairHandler.fs" />
     <Compile Include="Presentation\TradingHandler.fs" />
     <Compile Include="Presentation.fs" />
