--- a/ArbitrageGainer.fsproj
+++ b/ArbitrageGainer.fsproj
@@ -5,15 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Core\Models.fs" />
     <Compile Include="Domain\CrossTradePair.fs" />
     <Compile Include="Core\TradingStrategyDomain.fs" />
     <Compile Include="Services\HistoryArbitrageOpportunity.fs" />
     <Compile Include="Services\CrossTradePair.fs" />
-    <Compile Include="Services\TradingStrategyAgent.fs" />
-    <Compile Include="Services\TradingStrategyService.fs" />
     <Compile Include="Services\Config.fs" />
     <Compile Include="Services\Database.fs" />
     <Compile Include="Services\Repository\TradingStrategyRepository.fs" />
+    <Compile Include="Services\TradingStrategyAgent.fs" />
+    <Compile Include="Services\TradingStrategyService.fs" />
     <Compile Include="Services\Repository\UserRepository.fs" />
     <Compile Include="Infrastructure\AnnualizedReturnCalc.fs" />
     <Compile Include="Infrastructure\CrossTradedPairs.fs" />
