--- a/ArbitrageGainer.fsproj
+++ b/ArbitrageGainer.fsproj
@@ -22,6 +22,7 @@
     <Compile Include="Infrastructure\RealTimeMarketData.fs" />
     <Compile Include="Presentation\CrossTradePairHandler.fs" />
     <Compile Include="Presentation\TradingHandler.fs" />
+    <Compile Include="YamlParser.fs" />
     <Compile Include="Presentation.fs" />
     <Compile Include="Program.fs" /> 
   </ItemGroup>
