--- a/ArbitrageGainer.fsproj
+++ b/ArbitrageGainer.fsproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <Compile Include="Core\Models.fs" />
+    <Compile Include="Services/EmailSender.fs" />
+    <Compile Include="Services\Notification.fs" />
     <Compile Include="Domain\CrossTradePair.fs" />
     <Compile Include="Domain\PNLDomain.fs" />
     <Compile Include="Core\TradingStrategyDomain.fs" />
@@ -20,14 +22,15 @@
     <Compile Include="Services\Repository\OrderRepository.fs" />
     <Compile Include="Services\Repository\TransactionRepository.fs" />
     <Compile Include="Services\PNLCalculation.fs" />
+    <Compile Include="Infrastructure\OrderManagement.fs" />
     <Compile Include="Infrastructure\AnnualizedReturnCalc.fs" />
     <Compile Include="Infrastructure\CrossTradedPairs.fs" />
     <Compile Include="Infrastructure\TradingStrategyInfra.fs" />
     <Compile Include="Infrastructure\TradingAlgorithm.fs" />
     <Compile Include="Infrastructure\RealTimeMarketData.fs" />
-    <Compile Include="Infrastructure\OrderManagement.fs" />
     <Compile Include="Presentation\CrossTradePairHandler.fs" />
     <Compile Include="Presentation\TradingHandler.fs" />
+    <Compile Include="Presentation\TestEmailHandler.fs" />
     <Compile Include="YamlParser.fs" />
     <Compile Include="Presentation\PNLHandler.fs" />
     <Compile Include="Presentation.fs" />
@@ -36,6 +39,7 @@
 
   <ItemGroup>
     <PackageReference Include="FSharp.SystemTextJson" Version="1.3.13" />
+    <PackageReference Include="MailKit" Version="4.8.0" />
     <PackageReference Include="Giraffe" Version="5.0.0" />
     <PackageReference Include="MongoDB.Driver" Version="3.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
