fix trading parameters hardocded

--- a/ArbitrageGainer.fsproj
+++ b/ArbitrageGainer.fsproj
@@ -23,10 +23,12 @@
     <Compile Include="Infrastructure\AnnualizedReturnCalc.fs" />
     <Compile Include="Infrastructure\CrossTradedPairs.fs" />
     <Compile Include="Infrastructure\TradingStrategyInfra.fs" />
+    <Compile Include="Infrastructure\TradingParametersAgent.fs" />
     <Compile Include="Infrastructure\TradingAlgorithm.fs" />
     <Compile Include="Infrastructure\RealTimeTradingLogic.fs" />
     <Compile Include="Infrastructure\RealTimeMarketData.fs" />
     <Compile Include="Infrastructure\OrderManagement.fs" />
+    <Compile Include="Infrastructure\TradingParametersAgent.fs" />
     <Compile Include="Infrastructure\RealTimeTradingLogic.fs" />
     <Compile Include="Presentation\CrossTradePairHandler.fs" />
     <Compile Include="Presentation\TradingHandler.fs" />
