--- a/ArbitrageGainer.fsproj
+++ b/ArbitrageGainer.fsproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Logging\Logger.fs" />
     <Compile Include="Core\Models.fs" />
     <Compile Include="Services/EmailSender.fs" />
     <Compile Include="Services\Notification.fs" />
