--- a/ArbitrageGainer.fsproj
+++ b/ArbitrageGainer.fsproj
@@ -42,6 +42,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="DotNetEnv" Version="3.1.1" />
     <PackageReference Include="FSharp.SystemTextJson" Version="1.3.13" />
     <PackageReference Include="MailKit" Version="4.8.0" />
     <PackageReference Include="Giraffe" Version="5.0.0" />
