--- a/ArbitrageGainer.fsproj
+++ b/ArbitrageGainer.fsproj
@@ -35,6 +35,7 @@
     <Compile Include="Infrastructure\RealTimeMarketData.fs" />
     <Compile Include="Presentation\CrossTradePairHandler.fs" />
     <Compile Include="Presentation\TradingHandler.fs" />
+    <Compile Include="Presentation\TestEmailHandler.fs" />
     <Compile Include="YamlParser.fs" />
     <Compile Include="Presentation\PNLHandler.fs" />
     <Compile Include="Presentation.fs" />
