--- a/ArbitrageGainer.fsproj
+++ b/ArbitrageGainer.fsproj
@@ -42,6 +42,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Akka" Version="1.5.32" />
+    <PackageReference Include="Akka.Remote" Version="1.5.32" />
     <PackageReference Include="DotNetEnv" Version="3.1.1" />
     <PackageReference Include="FSharp.SystemTextJson" Version="1.3.13" />
     <PackageReference Include="MailKit" Version="4.8.0" />
